# SE-Project-Group4

./: README.md
MemoFlip/: CMakeLists.txt  cardwidget.cpp  cardwidget.h  gamewindow.cpp  gamewindow.h  gamewindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  parentdashboard.cpp  parentdashboard.h  parentdashboard.ui  professordashboard.cpp  professordashboard.h  professordashboard.ui  studentdashboard.cpp  studentdashboard.h  studentdashboard.ui
MemoFlip/database/: MemoFlipDatabase.db
MemoFlip/images/: Concepts Description.xlsx
